<resources>
    <string name="app_name">PortofolioApp</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_android">Android</string>
    <string name="txt_flutter">Flutter</string>
    <string name="txt_uiux">UIUX</string>
    <string name="txt_experience">Experience</string>
    <string name="txt_event">Event</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_manusia">Manusia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_portofolio">Portofolio</string>
    <string name="txt_documantation_link">Documantation Link</string>
    <string name="txt_50_app_android">50 Android App</string>
    <string name="txt__50_app_flutter">50 Flutter App</string>
    <string name="txt_career">Career</string>
    <string name="txt_about">About</string>
    <string name="txt_content">Content</string>
    <string name="txt_ui_ux_designs">Ui Ux Designs</string>
    <string name="txt_bambang">Bambang</string>
    <string name="txt_veronica">Veronica</string>
    <string name="txt_detail_experience">Detail Experience</string>
</resources>