<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.experience.DetailExperienceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDetailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_imageview"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:id="@+id/tvTitleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_veronica"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/_16dp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_detail_experience"
            android:layout_margin="@dimen/_16dp"
            android:id="@+id/tvContentDetailExperiences"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>