<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBackgroudProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_198dp"
            android:contentDescription="@string/txt_imageview"
            android:src="@drawable/navheader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_130dp"
            android:layout_marginTop="@dimen/_130dp"
            android:contentDescription="@string/txt_imageview"
            android:src="@drawable/profile_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBackgroudProfile" />

        <TextView
            android:id="@+id/tvNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/txt_bambang"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile" />

        <TextView
            android:id="@+id/tvCareerProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/txt_career"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameProfile" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvLikedinProfile"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginTop="@dimen/_16dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCareerProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/mail" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvGithubProfile"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@id/cvLikedinProfile"
            app:layout_constraintEnd_toStartOf="@id/cvEmailProfile"
            app:layout_constraintStart_toEndOf="@id/cvLikedinProfile"
            app:layout_constraintTop_toTopOf="@id/cvLikedinProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/github" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvEmailProfile"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@id/cvGithubProfile"
            app:layout_constraintEnd_toStartOf="@id/cvPhoneProfile"
            app:layout_constraintStart_toEndOf="@id/cvGithubProfile"
            app:layout_constraintTop_toTopOf="@id/cvGithubProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/mail" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvPhoneProfile"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@id/cvEmailProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvEmailProfile"
            app:layout_constraintTop_toTopOf="@id/cvEmailProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/phone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvAbout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginTop="@dimen/_32dp"
            android:layout_marginEnd="@dimen/_32dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvGithubProfile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvAboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@string/txt_about"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAboutTitle"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/tvContentAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_content"/>
                </androidx.core.widget.NestedScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>